# CpuTemp

./: CMakeLists.txt
include/: Measurement.h  Temperature.h
src/: Temperature.cpp  main.cpp
